--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -32,7 +32,7 @@
 @media(max-width:576px){
     .card-body-login{
         width:80vw !important;
-        left: 5% !important;
+        left: 7% !important;
     }
 }
 
